--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <div class="theme-switch">
-        <label>
+        <label class="switch">
             <input type="checkbox" id="themeToggle">
-            Dark Mode
+            <span class="slider"></span>
         </label>
     </div>
     <div class="calculator">
